feat: add example for java adk