@@ -3,14 +3,16 @@ package com.agui.adk.translator.step;
 import com.agui.adk.translator.TranslationContext;
 import com.agui.core.event.BaseEvent;
 import com.agui.core.event.ToolCallResultEvent;
+import com.google.adk.events.Event;
+import com.google.common.collect.ImmutableList;
 import com.google.genai.types.FunctionResponse;
 import io.reactivex.rxjava3.subscribers.TestSubscriber;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
@@ -19,6 +21,7 @@ import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 
+@ExtendWith(MockitoExtension.class)
 class ToolCallResponseStepTest {
 
     private ToolCallResponseStep translationStep;
@@ -34,53 +37,42 @@ class ToolCallResponseStepTest {
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
         translationStep = ToolCallResponseStep.INSTANCE;
     }
 
     @Test
     void shouldReturnEmpty_whenFunctionResponsesAreNull() {
-        // Arrange
         when(event.functionResponses()).thenReturn(null);
 
-        // Act
         TestSubscriber<BaseEvent> testSubscriber = translationStep.translate(event, context).test();
 
-        // Assert
         testSubscriber.assertNoValues();
         testSubscriber.assertComplete();
     }
 
     @Test
     void shouldReturnEmpty_whenFunctionResponsesAreEmpty() {
-        // Arrange
-        when(event.functionResponses()).thenReturn(List.of());
+        when(event.functionResponses()).thenReturn(ImmutableList.of());
 
-        // Act
         TestSubscriber<BaseEvent> testSubscriber = translationStep.translate(event, context).test();
 
-        // Assert
         testSubscriber.assertNoValues();
         testSubscriber.assertComplete();
     }
 
     @Test
     void shouldEmitResultEvent_whenFunctionResponseIsValid() {
-        // Arrange
         String toolCallId = "res-123";
-        Map<String, String> responseData = Map.of("weather", "sunny");
+        Map<String, Object> responseData = Map.of("weather", "sunny");
         when(functionResponse.id()).thenReturn(Optional.of(toolCallId));
         when(functionResponse.response()).thenReturn(Optional.of(responseData));
-        when(event.functionResponses()).thenReturn(List.of(functionResponse));
+        when(event.functionResponses()).thenReturn(ImmutableList.of(functionResponse));
         
-        // Mock the context to indicate this is a normal tool
         when(context.isLongRunningTool(anyString())).thenReturn(false);
         when(context.isPredictiveStateTool(anyString())).thenReturn(false);
 
-        // Act
         TestSubscriber<BaseEvent> testSubscriber = translationStep.translate(event, context).test();
 
-        // Assert
         testSubscriber.assertValueCount(1);
         testSubscriber.assertComplete();
 
@@ -91,41 +83,32 @@ class ToolCallResponseStepTest {
         assertEquals(toolCallId, resultEvent.getToolCallId());
         assertEquals("{\"weather\":\"sunny\"}", resultEvent.getContent());
     }
+
     @Test
-    void translate_withLongRunningToolResponse_shouldBeFiltered() {
-        // Arrange
+    void shouldBeFiltered_whenResponseIsFromLongRunningTool() {
         when(functionResponse.id()).thenReturn(Optional.of("lro-123"));
-        when(event.functionResponses()).thenReturn(List.of(functionResponse));
+        when(event.functionResponses()).thenReturn(ImmutableList.of(functionResponse));
         
-        // Mock the context to indicate this is a long-running tool
         when(context.isLongRunningTool("lro-123")).thenReturn(true);
         when(context.isPredictiveStateTool("lro-123")).thenReturn(false);
 
-        // Act
         TestSubscriber<BaseEvent> testSubscriber = translationStep.translate(event, context).test();
 
-        // Assert
         testSubscriber.assertNoValues();
         testSubscriber.assertComplete();
     }
 
     @Test
-    void translate_withPredictiveStateToolResponse_shouldBeFiltered() {
-        // Arrange
+    void shouldBeFiltered_whenResponseIsFromPredictiveStateTool() {
         when(functionResponse.id()).thenReturn(Optional.of("predictive-123"));
-        when(event.functionResponses()).thenReturn(List.of(functionResponse));
+        when(event.functionResponses()).thenReturn(ImmutableList.of(functionResponse));
         
-        // Mock the context to indicate this is a predictive state tool
         when(context.isLongRunningTool("predictive-123")).thenReturn(false);
         when(context.isPredictiveStateTool("predictive-123")).thenReturn(true);
 
-        // Act
         TestSubscriber<BaseEvent> testSubscriber = translationStep.translate(event, context).test();
 
-        // Assert
         testSubscriber.assertNoValues();
         testSubscriber.assertComplete();
     }
-
-    // More tests will be added
 }
